# practice

./: README.md
c/euler/: Makefile  eulers_ten.c
cpp/sorting/: sorting.cpp
hs/99/: README.txt  lists.hs
hs/first_principles/: README.txt  TODO.txt
hs/first_principles/addition/: Addition.hs  addition.cabal
hs/first_principles/addition/.stack-work/install/x86_64-linux/lts-8.11/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  addition-0.1.0.0-EQwtWoxsQGYKPNN08Mgf8b  addition-0.1.0.0-XzculcwkFM4Q1FUtqIheb  ansi-terminal-0.6.2.3-4HPxin1iv6RAndS8lH3nzo  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  (+10 more)
hs/first_principles/hangman/: hangman.cabal
hs/first_principles/hangman/src/: Main.hs
hs/first_principles/morse/: morse.cabal
hs/first_principles/morse/.stack-work/install/x86_64-linux/lts-8.11/8.0.2/flag-cache/: morse-0.1.0.0-8iF9zz5mk7vDmcicAUfWZQ
hs/first_principles/morse/.stack-work/install/x86_64-linux/lts-8.11/8.0.2/lib/x86_64-linux-ghc-8.0.2/morse-0.1.0.0-8iF9zz5mk7vDmcicAUfWZQ/: Morse.hi
hs/first_principles/morse/.stack-work/install/x86_64-linux/lts-8.11/8.0.2/pkgdb/: morse-0.1.0.0-8iF9zz5mk7vDmcicAUfWZQ.conf  package.cache
hs/first_principles/morse/src/: Main.hs  Morse.hs
hs/first_principles/morse/test/: test.hs
py/: connect_four.py  graph_utils.py  meta_awareness.py  montecarlo.py
py/ml/bayes/: bayes.py  harness.py  logistic.py
py/ml/bootcamp/: README.txt
py/ml/kaggle/titanic/: ans.csv  ans0.csv  ans1.csv  predict.py  x.csv  xt.csv
py/ml/tf/: linreg.py  mnist_beg.py  mnist_deep.py  mnist_softmax.py
(+8 files in other folders)
