name:                morse
version:             0.1.0.0
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && <5
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

